<resources>

    //Конвертер
    <string name="app_name">Practice13</string>
    <string name="kurs">Введите курс обмена $</string>
    <string name="summa">Введите сумму</string>
    <string name="result">Результат:</string>
    <string name="summ_dol">Сумма в долларах</string>
    <string name="dol_rub">1 USD = RUB</string>
    <string name="change">Конвертировать</string>
    <string name="secondExercise">Треугольник</string>

    //Треугольник
    <string name="side1">Введите длину 1 катета:</string>
    <string name="side2">Введите длину 2 катета:</string>
    <string name="edit1">Длина 1 катета</string>
    <string name="edit2">Длина 2 катета</string>
    <string name="hypotenuse">Гипотенуза: </string>
    <string name="perimeter">Периметр: </string>
    <string name="area">Площадь: </string>
    <string name="calculate">Вычислить</string>
</resources>